@@ -27,8 +27,7 @@ namespace Rcpp{
 template <int RTYPE, bool NA, typename T, bool RHS_NA, typename RHS_T>
 inline IntegerVector match( const VectorBase<RTYPE,NA,T>& x, const VectorBase<RTYPE,RHS_NA,RHS_T>& table_ ){
     Vector<RTYPE> table = table_ ;
-    sugar::IndexHash<RTYPE> hash( table ) ;
-    return hash.lookup( x.get_ref() ) ;
+    return sugar::IndexHash<RTYPE>( table ).fill().lookup( x.get_ref() ) ;
 }
 
 } // Rcpp
